--- a/css/ca-custom.css
+++ b/css/ca-custom.css
@@ -1,27 +1,29 @@
 header.masthead {
-      border-bottom: 3px solid #ccc;
-      margin-bottom: 20px;
-    }
+  border-bottom: 3px solid #ccc;
+  margin-bottom: 20px;
+}
 
-    .masthead h1 {
-      font-size: 4em;
-      line-height: 0.7;
-      margin-top: 50px;
-    }
+.masthead h1 {
+  font-size: 4em;
+  line-height: 0.7;
+  margin-top: 50px;
+}
 
-    .masthead small {
-      text-transform: uppercase;
-      font-size:.4em;
-    }
+.masthead small {
+  text-transform: uppercase;
+  font-size: 0.4em;
+}
 
-    .masthead img {
-      margin: -10px
-    }
+.masthead img {
+  margin: -10px;
+}
 
-    #sidebar {
-      margin-bottom: 20px;
-    }
+#sidebar {
+  margin-bottom: 20px;
+}
 
-    .nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
-      background-color: #fe3c63;
-    }
+.nav-pills > li.active > a, 
+.nav-pills > li.active > a:focus, 
+.nav-pills > li.active > a:hover {
+  background-color: #fe3c63;
+}
